Updated podspec, package.json, workflow

--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "rn-apple-healthkit",
+  "name": "@mypthub/rn-apple-healthkit",
+  "title": "React Native HealthKit",
   "version": "0.8.0",
   "description": "A React Native package for interacting with Apple HealthKit",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/terrillo/rn-apple-healthkit.git"
+    "url": "git+https://github.com/mypthub/rn-apple-healthkit.git",
+    "baseUrl": "https://github.com/mypthub/rn-apple-healthkit"
   },
-  "keywords": [
-    "Apple",
-    "health-kit",
-    "healthkit",
-    "ReactNative",
-    "react-native",
-    "react",
-    "native",
-    "ios"
+  "contributors": [
+    "Terrillo Walls",
+    "My PT Hub"
   ],
   "bugs": {
-    "url": "https://github.com/terrillo/rn-apple-healthkit/issues"
+    "url": "https://github.com/mypthub/rn-apple-healthkit/issues"
   },
-  "homepage": "https://github.com/terrillo/rn-apple-healthkit",
-  "author": "Terrillo Walls",
+  "homepage": "https://github.com/mypthub/rn-apple-healthkit",
   "license": "MIT",
   "devDependencies": {
     "react": "16.8.3",
@@ -29,5 +27,8 @@
   },
   "peerDependencies": {
     "react-native": ">=0.40.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
